--- a/debian/rules
+++ b/debian/rules
@@ -61,7 +61,7 @@ binary-arch: build
 	# commands to install the package into debian/<packagename>
 	$(MAKE) prefix=$(prefix)/usr BINDIR=$(prefix)/usr/bin CONFDIR=$(prefix)/etc/mplayer LIBDIR=$(prefix)/usr/lib DATADIR=$(prefix)/usr/share/mplayer  MANDIR=$(prefix)/usr/share/man  install
 
-	dh_installdebconf
+	install -D -m 644 etc/example.conf $(prefix)/etc/mplayer/mplayer.conf
 	dh_installdocs -X.svn -Xmplayer.1 DOCS/*
 	dh_installexamples etc/example.conf etc/dvb-menu.conf etc/input.conf etc/menu.conf
 	dh_installmime
